# PubChemToPostgreSQL

./: LICENSE  README.md
filterCasNumbers/: CMakeLists.txt  README.md  main.c  main.cpp
sdf2postgres/: CMakeLists.txt  Csv.cc  Csv.h  Database.cc  Database.h  Output.cc  Output.h  README.md  main.cc
